@@ -1,33 +1,35 @@
 package com.itacademy.classwork.jd2.practicThreads.customs;
 
-import java.util.List;
+import java.util.LinkedList;
 
 public class PLEmployee extends Employee {
 
-	public PLEmployee(List<Car> carQueue) {
+	public PLEmployee(LinkedList<Car> carQueue) {
 		super(carQueue);
 	}
 
 	@Override
 	public void run() {
 		String name = Thread.currentThread().getName();
-		System.out.println(String.format("Start PLEmployee %s ", name));
-		try {
-			while (true) {
-				deleteCar(name);
-				Thread.sleep(1500);
+		while (true) {
+			try {
+				Thread.sleep(15 * 1000);
+			} catch (InterruptedException e) {
+				goHome(name);
+				return;
 			}
-		} catch (InterruptedException e) {
-			e.printStackTrace();
+			deleteCar(name);
 		}
 	}
 
-	public synchronized void deleteCar(String name) {
-		if (getCarQueue().isEmpty()) {
-			System.out.println("No cars in buffer.");
-		} else {
-			getCarQueue().remove(0);
-			System.out.println(String.format("PL %s delete car. [%s]", name, getCarQueue().size()));
+	public void deleteCar(String name) {
+		synchronized (getCarQueue()) {
+			if (getCarQueue().isEmpty()) {
+				System.out.println(String.format("PL %s: No cars in buffer.", name));
+			} else {
+				getCarQueue().removeFirst();
+				System.out.println(String.format("PL %s: delete car. [%s]", name, getCarQueue().size()));
+			}
 		}
 	}
 }
